# webvy

./: .gitignore  Cargo.toml  README.md  blog.toml
content/: _index.md
content/blog/: _index.md  a-blog.md
content/portfolio/: _index.md  project-1.md  project-2.md
src/: main.rs
templates/: base.html  head.html  index.html  page.html  post.html  section.html
templates/blog/: post.html  section.html
templates/portfolio/: post.html  section.html
webvy_app/: Cargo.toml
webvy_app/src/: app.rs  deferred.rs  errors.rs  file.rs  files.rs  front_matter.rs  lib.rs  processor.rs  traits.rs
webvy_app/src/processor/: configuration.rs  markdown.rs  tera.rs
webvy_core/: Cargo.toml
webvy_core/src/: lib.rs
webvy_frontmatter/: Cargo.toml
webvy_matterparser/: Cargo.toml
webvy_matterparser/src/: lib.rs
